[package]
name = "RustOS"
version = "0.1.1"
authors = ["Ethan Tola <etola@d3engineering.com>"]
edition = "2018"

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"
